fix .alignfull style when .has-sidebar

--- a/src/scss/modules/_blocks.scss
+++ b/src/scss/modules/_blocks.scss
@@ -11,6 +11,16 @@
 	}
 }
 
+.has-sidebar {
+
+  @include breakpoint('l') {
+    .alignfull {
+      margin-left: calc(78.5% - 50vw);
+    }
+  }
+
+}
+
 .wp-block-group {
 
 	&.alignfull {
